Utiliser postgres en dev et en test également. Toute mention à MySql a été retirée

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,5 +1,5 @@
 development: 
-  adapter: mysql2
+  adapter: postgresql
   database: accq_dev
   encoding: utf8
   host: localhost
@@ -7,7 +7,7 @@ development:
   password: <%=ENV['DB_PASS']%>
 
 test:
-  adapter: mysql2
+  adapter: postgresql
   database: accq_test
   encoding: utf8
   host: localhost
