Billet #33: Transformer tous les liens externes en "https"
Puisque le site deviendra sous peu sécurisé sous SSL, tous les liens externes doivent également pointer
vers des sites sécurisés, et ce afin d'éviter un avertissement dans les navigateurs.

--- a/spec/fixtures/hive_contacts.yml
+++ b/spec/fixtures/hive_contacts.yml
@@ -3,4 +3,4 @@ georges_in_vlq:
   full_name: Georges Roy
   email: georges@georges.com
   phone: 555-123-1234
-  fb_page: http://www.facebook.com/1234
+  fb_page: https://www.facebook.com/1234
